--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-index.html
+<!DOCTYPE html>
+<html lang="pt-BR">
+    <head>
+        <title>Início</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
+        <link rel='stylesheet' href='https://fonts.google.com/specimen/Fauna+One?query=Fauna+One' >
+        <link rel='stylesheet' href='https://fonts.google.com/specimen/Sarabun?query=SARA'>
+        <link rel="stylesheet" href="../css/index.css">
+    </head>
+    <body>
+        <header>
+            <img class='logo' src="../img/logo.png" alt="logo">
+            <h1>
+                Arcolab
+            </h1>
+        </header>
+        <main>
+            <h2>Junte-se à comunidade dos estudantes de arquitetura </h2>
+            <a class="borda" href="./login.html"> Fazer login</a>
+            <a class="borda" href="./criarconta.html">Criar conta</a>
+        </main>
+    </body>
+</html>
