--- a/html/doacoes.html
+++ b/html/doacoes.html
@@ -16,63 +16,50 @@
     </head>
     <body>
         <header>
-            <a class='seta' href="./projetox.html"><i class="material-icons" >keyboard_arrow_left</i> </a>
+            <a class='seta' href="./procura.html"><i class="material-icons" >keyboard_arrow_left</i> </a>
             <img class='logo' src="../img/logo.png" alt="logo">
-            <p>Doações perto de você</p>
+            <h1>Doações perto de você</h1>
         </header>
         <main>
             <div class="projetos_busca">
-                <div class='rec'>
-                    <div class="info_doacoes">
-                        <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
-                        <a class='botao_atual' href=""><i class="material-icons">account_circle</i></a>
-                        <p>3km</p>
-                    </div>
-                    <p>Projeto X</p>
+                <div class='doacao'>
+                    <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
+                    <a class='botao_atual' href=""><i class="material-icons">account_circle</i></a>
+                    <p class='distancia'>3km</p>  
+                    <p >Projeto X</p>
                 </div>
-                <div class='rec'>
-                    <div class="info_doacoes">
-                        <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
-                        <a class='botao_atual' href=""><i class="material-icons">build</i></a>
-                        <p>3km</p>
-                    </div>
+                <div class='doacao'>  
+                    <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
+                    <a class='botao_atual' href=""><i class="material-icons">build</i></a>
+                    <p class='distancia'>2,5km</p>    
                     <p>Projeto Y</p>
-                </div>
-                
+                </div>  
             </div>
             <div class="projetos_busca">
-                <div class='rec'>
-                    <div class="info_doacoes">
-                        <a class='botao_atual' href=""><i class="material-icons">account_circle</i></a>
-                        <a class='botao_atual' href=""><i class="material-icons">build</i></a>
-                        <p>3km</p>
-                    </div>
+                <div class='doacao'>
+                    <a class='botao_atual' href=""><i class="material-icons">account_circle</i></a>
+                    <a class='botao_atual' href=""><i class="material-icons">build</i></a>
+                    <p class='distancia'>800m</p>
                     <p>Projeto A</p> 
                 </div>
-                <div class='rec'>
-                    <div class="info_doacoes">
-                        <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
-                        <p>3km</p>
-                    </div>
+                <div class='doacao'>
+                    <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
+                    <p class='distancia'>1,5km</p>
                     <p>Projeto B</p>
                 </div>
             </div>
             <div class="projetos_busca">
-                <div class='rec'>
-                    <div class="info_doacoes">
-                        <a class='botao_atual' href=""><i class="material-icons">build</i></a>
-                        <p>3km</p>
-                    </div>
+                <div class='doacao'> 
+                    <a class='botao_atual' href=""><i class="material-icons">build</i></a>
+                    <p class='distancia'>2,8km</p>
                     <p>Projeto C</p>
                 </div>
 
-                <div class='rec'>
-                    <div class="info_doacoes">
-                        <a class='botao_atual' href=""><i class="material-icons">build</i></a>
-                        <a class='botao_atual' href=""><i class="material-icons">account_circle</i></a>
-                        <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
-                        <p>3km</p>
-                    </div>
+                <div class='doacao'>
+                    <a class='botao_atual' href=""><i class="material-icons">build</i></a>
+                    <a class='botao_atual' href=""><i class="material-icons">account_circle</i></a>
+                    <a class='botao_atual' href=""><i class="material-icons">monetization_on</i></a>
+                    <p class='distancia'>1,7km</p>
                     <p>Projeto C</p>
                 </div>
 
@@ -81,7 +68,7 @@
         </main>
         <footer >
             <a class='botao' href="inicial.html"><i class="material-icons">roofing</i></a>
-            <a class='botao_atual' href="procura.html"><i class="material-icons">search</i></a>
+            <a class='botao' href="procura.html"><i class="material-icons">search</i></a>
             <a class='botao' href=""><i class="material-icons">add</i></a>
             <a  class='botao' href=""><i class="material-icons">notifications_none</i></a>
             <a class='botao' href=""><i class="material-icons">person_outline</i></a>
